clusters/production/media/maintainerr/maintainerr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maintainerr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: maintainerr
  template:
    metadata:
      labels:
        app: maintainerr
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: maintainerr
        securityContext:
          allowPrivilegeEscalation: false
        image: ghcr.io/jorenn92/maintainerr:2.0.4 # {"$imagepolicy": "flux-system:maintainerr"}
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 6246
        startupProbe:
          tcpSocket:
            port: 6246
          failureThreshold: 60
          periodSeconds: 5
        livenessProbe:
          tcpSocket:
            port: 6246
          periodSeconds: 20
        readinessProbe:
          tcpSocket:
            port: 6246
          periodSeconds: 10
        resources:
          requests:
            cpu: "50m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "512Mi"
        volumeMounts:
        - name: maintainerr
          mountPath: /data
      volumes:
      - name: maintainerr
        persistentVolumeClaim:
          claimName: pvc-maintainerr
---
apiVersion: v1
kind: Service
metadata:
  name: maintainerr
  namespace: media
  labels:
    app: maintainerr
spec:
  selector:
    app: maintainerr
  ports:
  - name: maintainerr
    port: 6246
    targetPort: 6246
  type: ClusterIP
