clusters/production/media/maintainerr/maintainerr-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: maintainerr
  namespace: default
spec:
  parentRefs:
  - name: internal
    namespace: gateway
    sectionName: https
  hostnames:
  - maintainerr.rees.ca
  rules:
  - backendRefs:
    - name: maintainerr
      port: 6246
